[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-incident-response-env"
version = "0.1.0"
description = "A microservice failure simulation for AI SRE agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "numpy",
    "openenv-core",
    "pyyaml"
]

[project.scripts]
server = "server.app:main"

[tool.uv]
package = true
